--- a/.github/workflows/Cerbero-Premarket.yml
+++ b/.github/workflows/Cerbero-Premarket.yml
@@ -46,7 +46,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
           # Add both logs and datos files
-          git add logs/ datos_*.txt
+          git add *_datos.txt
           git commit -m "Update premarket news & sentiment" || true
           git remote set-url origin "https://x-access-token:${GH_PAT}@github.com/4L3M4R/cerbero.git"
           git push origin HEAD:main
