Rename workflow and remove schedule trigger
Removed scheduled trigger for the workflow.

--- a/.github/workflows/shift_sentiment_bitget.yml
+++ b/.github/workflows/shift_sentiment_bitget.yml
@@ -1,9 +1,7 @@
-name: Update Sentiment shift_sentiment_bitget
+name: shift_sentiment_bitget
 
 
 on:
-  schedule:
-    - cron: '5 0 * * *'  # 12:05 AM UTC (7:05 PM EST previous day)
   workflow_dispatch:
   
 jobs:
