--- a/.github/workflows/shift_sentiment_bitget.yml
+++ b/.github/workflows/shift_sentiment_bitget.yml
@@ -10,8 +10,12 @@ jobs:
 
     steps:
       # 1️⃣ Checkout repo
+
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
+
 
       # 2️⃣ Set up Python
       - name: Set up Python
